# pybenford

./: .gitignore  CHANGELOG.md  LICENSE.txt  Makefile  README.md  setup.cfg  setup.py
.github/workflows/: code.yml
binder/: environment.yml
devtools/: RELEASE.md  bumpversion.cfg
notebooks/: e.coli_abundance_analysis.ipynb  e033784_Proteins.xlsx
notebooks/.ipynb_checkpoints/: e.coli_abundance_analysis-checkpoint.ipynb
pybenford/: __init__.py  benford.py
tests/: test_benford.py
