[metadata]
name = pybenford
version = {version}
author = William Amory, Pierre Poulain
author_email = pierre.poulain@u-paris.fr
url = https://github.com/pierrepo/pybenford
description = Analyze large datasets with Benford's law
long_description = file: README.md, CHANGELOG.md, LICENSE.txt
long_description_content_type = text/markdown
keywords = Benford's law, large datasets, omics, proteomics, genomics, RNA-seq
license = BSD 3-Clause License
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
zip_safe = False
python_requires= >=3.6
install_requires =
    numpy
    scipy
    pandas

[options.package_data]
* = LICENSE.txt, CHANGELOG.md

[options.extras_require]
test =
    pytest
